--- a/esm_204_a4.Rmd
+++ b/esm_204_a4.Rmd
@@ -15,7 +15,9 @@ library(tidyverse)
 # t = time
 # T = temperature at time 100 (given)
 
+T <- 0 #overall value for T
 
+#______________________________________________
 
 t_vector <- seq(0,100, by = 1)
 
@@ -24,7 +26,7 @@ temp <-  function(t, T)
 return(out)
 }
 
-#temp_df_T_0 <- data.frame(temp(t_vector,0))
+temp_df_T_0 <- data.frame(temp(t_vector,T))
 
 T_0_df <- data.frame(t = t_vector) %>% 
   mutate(tau = temp(t_vector, T))# %>% 
