All functions base structure set

--- a/esm_204_a4.Rmd
+++ b/esm_204_a4.Rmd
@@ -23,15 +23,23 @@ library(tidyverse)
 t_vector <- seq(1,200, by = 1)
 t_diff = 5 # T
 B = .05
+g = .01
+n = .5
 
 
 
 
 ```
-```{r}
-# Functions 1 - 4
 
-# Function - Temperature(t)
+
+Structure for Functions 1 - 5 is next.
+
+
+
+```{r}
+# Functions 1 - 5
+
+# Function 1 - Temperature(t)
 
 temp <- function(t){
   out = t*t_diff/100
@@ -44,7 +52,7 @@ temp_df_T_0 <- data.frame(t = t_vector) %>%
 mutate(temp = temp(t_vector)) %>% 
 mutate(temp_min = min(temp(t_vector)))
 
-# Function - Retention (t)
+# Function 2 - Retention (t)
 retention <- function(t){
   out = exp(-B * (temp(t))^2)
   return(out)
@@ -54,6 +62,41 @@ retention <- function(t){
 
 retent_df_T_0 <- data.frame(t = t_vector) %>% 
 mutate(retent = retention(t_vector)) 
+
+# Function 3 - Consumption (t)
+consumption <- function(t){
+  out = retention(t) * exp(g*t)
+  return(out)
+}
+
+# Consumption df
+
+consum_df_T_0 <- data.frame(t = t_vector) %>% 
+mutate(consum = consumption(t_vector))
+
+# Function 4 - Utility (C)
+
+C <- consum_df_T_0$consum
+
+utility <- function(C){
+  out = (C^(1-n))/(1-n)
+  return(out)
+}
+
+# Consumption df
+
+utility_df_T_0 <- data.frame(t = t_vector) %>% 
+  mutate(consum = C) %>% 
+  mutate(utility = utility(C))
+
+# Function 5 - Discount Rate (Ramsey Rule)
+
+r <- function(p){
+  out = (d + n*g)
+  return(out)
+}
+
+
 ```
 
 
